// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense 
    totalling £
    1.00
  </h1>
</div>
`;

exports[`should render expense summary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses 
    totalling £
    20.00
  </h1>
</div>
`;
